# taskflow

./: .gitignore
taskflow-lib/: CMakeLists.txt  ast-lambda.txt  ast.txt  cmd.md  compile_commands.json  emit-llvm-dialect.mlir  lib.cpp  lib.hpp  sample-combine-taskflow-and-cpp.mlir  test-llvm.mlir  test-polygeist.mlir  test.cpp  test.mlir  unhandled-syntax.txt  use.cpp  usefulcmd.sh
test-apps-dev/: ast.txt  cmd.md  cmds.sh  simple.cpp
